@startuml kommanda

class Usuario {
    - rol: RolEnum
    + agregarPlato(p: Plato, m: Menu): Menu
    + agregarPlato( p: Plato, m: Menu): Menu
    + editarPlato(p: Plato): Plato
    + cambiarDisponibilidad(estado: Boolean, p: Plato): Plato
    + crearComanda(platos: List<Plato>): Comanda
    + agregarPlatos(p: List<Plato>, c: Comanda): Comanda
    + removerPlatos(p: List<Plato>, c: Comanda): Comanda
    + modificarPlatoDePedido(seleccionado: Plato, nuevo: Plato, c: Comanda): Comanda
    + marcarEntregado(c: Comanda): Comanda
}

class Comanda {
    - estado: EstadoComandaEnum
    - bebidasListas: Boolean
    - platos: List<Plato>
    + cambiarEstado(enum: EstadoComandaEnum): void
    + agregarPlato(p: Plato): List<Plato)>
    + removerPlato(p: Plato): List<Plato)>
    + totalPedido(): Number
}

class Pedido {
    - notas: String
    - platos: List<Plato>
}



class Resto {
    - comandas: List<Comanda>
    + pedidosPendientes(): List<Comanda>
}

class Plato {
    - nombre: String
    - categoria: CategoriaEnum
    - precio: Number
    - descripcion: String
    - disponibilidad: Boolean
}

class Menu {
    - platosDisponibles: List<Plato>
}

enum EstadoComandaEnum {
    - INGRESADO
    - ENTRADAS_LISTAS
    - PRINCIPALES_LISTOS
    - POSTRES_LISTOS
    - ENTREGADO
    - PAGADO
}
enum RolEnum {
    - ADMINISTRADOR
    - ENCARGADO
    - MOZO
}
enum CategoriaEnum {
    - Entrada
    - Principal
    - Postre
    - Bebida
}


Usuario -> RolEnum
Usuario -.> Comanda
Usuario -.> Plato
Pedido -> Plato
Plato -> CategoriaEnum
Comanda --> EstadoComandaEnum
Comanda -> Plato: *
Resto --> Comanda: *
Resto ..> Comanda

@enduml